# hackaton_smtu_2024

./: .gitignore  README.md
building_editor_models/area/: model.config  model.sdf
hackaton2024/: README.md  mover_start.bash  scene_start.bash  task_start.bash
hackaton2024/src/example_cpp_package/: CMakeLists.txt  package.xml
hackaton2024/src/example_cpp_package/src/: example_cpp_node.cpp
hackaton2024/src/example_py_package/: package.xml  setup.cfg  setup.py
hackaton2024/src/example_py_package/example_py_package/: MotionNode.py  example_py_node.py  test.py
hackaton2024/src/mecbot_description/: CMakeLists.txt  package.xml
hackaton2024/src/mecbot_description/launch/: visualize_robot_simulation.launch.py  visualize_robot_standalone.launch.py
hackaton2024/src/mecbot_description/rviz/: visualize_robot.rviz
hackaton2024/src/mecbot_description/urdf/: base.xacro  camera.xacro  color.xacro  lidar.xacro  motor.xacro  pillar.xacro  robot.xacro  wheel.xacro
hackaton2024/src/mecbot_description/worlds/: close_scene.world  scene1.world
model_editor_models/blue_cube/: model.sdf
model_editor_models/red_cube/: model.sdf
